# Streamzi

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  README_EN.md  docker-compose.yml  main.py  pyproject.toml  requirements-web.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_en.yml  feature.yml  feature_en.yml  question.yml  question_en.yml
.github/workflows/: docker-build.yml  python-lint.yml  sync.yml  test.yml
app/: __init__.py  app_manager.py  installation_manager.py  process_manager.py
app/api/: video_stream_service.py
app/auth/: auth_manager.py
app/core/: __init__.py  config_manager.py  language_manager.py  record_manager.py  stream_manager.py  update_checker.py
app/core/ffmpeg_builders/: __init__.py  base.py  flv.py  m4a.py  mkv.py  mov.py  mp3.py  mp4.py  ts.py
app/core/ffmpeg_builders/audio/: __init__.py  aac.py  m4a.py  mp3.py  wav.py  wma.py
app/core/ffmpeg_builders/video/: __init__.py  flv.py  mkv.py  mov.py  mp4.py  ts.py
app/core/platform_handlers/: __init__.py  base.py  handlers.py
app/lifecycle/: app_close_handler.py  tray_manager.py
app/messages/: message_pusher.py  notification_service.py
app/models/: audio_format_model.py  recording_model.py  recording_status_model.py  video_format_model.py  video_quality_model.py
app/scripts/: ffmpeg_install.py  node_install.py
app/ui/: base_page.py
app/ui/components/: card_dialog.py  help_dialog.py  progress_overlay.py  recording_card.py  recording_dialog.py  save_progress_overlay.py  search_dialog.py  show_snackbar.py  video_player.py
app/ui/filters/: __init__.py  recording_filters.py
app/ui/navigation/: sidebar.py
app/ui/themes/: __init__.py  theme.py  theme_manager.py
app/ui/views/: about_view.py  home_view.py  login_view.py  settings_view.py  storage_view.py
app/utils/: delay.py  logger.py  utils.py
assets/icons/: Appicon.icns
config/: default_settings.json  language.json  version.json
locales/: en.json  zh_CN.json
